fix(checkbox): label does not overlap anymore on very narrow containers

--- a/src/components/checkbox/checkbox.scss
+++ b/src/components/checkbox/checkbox.scss
@@ -62,7 +62,7 @@
 
 /* Create a custom checkbox */
 .wcs-checkmark {
-    width: 1.125rem;
+    flex: 0 0 1.125rem;
     height: 1.125rem;
     border: 2px solid var(--wcs-checkbox-border-color);
     border-radius: 3px;
